# cabal2nix-issue-493

./: default.nix  readme.org
calling-haskell-from-c/hs-from-c/: Makefile  default.nix  shell.nix
calling-haskell-from-c/hs-from-c/src/: main.c
calling-haskell-from-c/hs-to-c/: default.nix  export.nix  hs-to-c.cabal
calling-haskell-from-c/hs-to-c/csrc/: HsToC.c  HsToC.h
calling-haskell-from-c/hs-to-c/src/HsToC/: Fib.hs
ghc-from-c/: default.nix  shell.nix
